--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,8 @@
 {
-    "name": "diynyk/library-38-currency",
-    "type": "project",
+    "name": "diynyk/38-sdk",
+    "type": "library",
     "require": {
-      "symfony/console": "~5",
       "symfony/yaml": "~5",
-      "symfony/dependency-injection": "~5",
-      "symfony/config": "~5",
       "guzzlehttp/guzzle": "~7",
       "monolog/monolog": "~2"
     },
@@ -13,7 +10,7 @@
     "minimum-stability": "dev",
     "autoload": {
       "psr-4": {
-        "Library_-38_Currency\\": "src"
+        "Diynyk\\38\\": "src"
       }
     }
   }
